# ChangeLog for media-libs/xine-lib
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.351 2006/06/01 22:47:15 weeve Exp $

  01 Jun 2006; Jason Wever <weeve@gentoo.org>
  xine-lib-1.1.2_pre20060328-r9.ebuild:
  Stable on SPARC wrt security bug #134951.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org>
  xine-lib-1.1.2_pre20060328-r9.ebuild:
  Stable on alpha wrt security Bug #134951.

  01 Jun 2006; Luis Medinas <metalgod@gentoo.org>
  xine-lib-1.1.2_pre20060328-r9.ebuild:
  Stable on amd64 for security bug #134951.

*xine-lib-1.1.2_pre20060328-r9 (31 May 2006)

  31 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -xine-lib-1.1.2_pre20060328-r6.ebuild,
  -xine-lib-1.1.2_pre20060328-r7.ebuild,
  -xine-lib-1.1.2_pre20060328-r8.ebuild,
  +xine-lib-1.1.2_pre20060328-r9.ebuild:
  Patchset bump to fix the buffer overflow reported in bug #134951. Also
  disable the visibility patch if the compiler does not support
  -fvisibility=hidden.

*xine-lib-1.1.2_pre20060328-r8 (28 May 2006)

  28 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +xine-lib-1.1.2_pre20060328-r8.ebuild:
  Bump patchset, added patch to fix FLAC reporting no audio (KDE Bug #128217.

  26 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  xine-lib-1.1.2_pre20060328-r7.ebuild:
  Don't force un-parallel make.

  24 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  xine-lib-1.1.2_pre20060328-r7.ebuild:
  Add ~x86-fbsd keyword.

*xine-lib-1.1.2_pre20060328-r7 (22 May 2006)

  22 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +xine-lib-1.1.2_pre20060328-r7.ebuild:
  Add new revision with a patch to allow playing of m4b files.

  17 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  -xine-lib-1.1.2_pre20060328-r2.ebuild,
  -xine-lib-1.1.2_pre20060328-r5.ebuild:
  Drop old versions.

  14 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  xine-lib-1.1.2_pre20060328-r6.ebuild:
  Filter -fforce-addr in any case, bug #132416.
