@@ -1,0 +1,6 @@
+MD5 1b98ffb4087025c7c38bae883ada8735 xine-lib-1.1.2cvs20060328.tar.gz 7996045
+RMD160 4e561e02b7cd9a10797925386ae7416a932c8431 xine-lib-1.1.2cvs20060328.tar.gz 7996045
+SHA256 fd95811d123e4a82c815674f3722faf3a769e3ba3760d5a4da8630c83f7c7e38 xine-lib-1.1.2cvs20060328.tar.gz 7996045
+MD5 dfb0c47d6dafcf5016f1597df861eee3 xine-lib-patches-44.tar.bz2 37195
+RMD160 a55d4b9df86ac554f212f2847ec3c7596c560401 xine-lib-patches-44.tar.bz2 37195
+SHA256 589c1aa9c152a1188d5c4b81f9f6da28e6a61a41ea49d8f53ea73c0536cf2eaf xine-lib-patches-44.tar.bz2 37195
