@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.351 2006/06/01 22:47:15 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.352 2006/06/02 20:13:51 flameeyes Exp $
+
+*xine-lib-1.1.2_pre20060328-r10 (02 Jun 2006)
+
+  02 Jun 2006; Diego Pettenò <flameeyes@gentoo.org>
+  +xine-lib-1.1.2_pre20060328-r10.ebuild:
+  Add new revision with a fix for stream containing ' character.
 
   01 Jun 2006; Jason Wever <weeve@gentoo.org>
   xine-lib-1.1.2_pre20060328-r9.ebuild:
